--- a/apocalypsis-zombie.ipynb
+++ b/apocalypsis-zombie.ipynb
@@ -22,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola','escopeta']\n",
     "\n",
@@ -33,7 +41,15 @@
     "    'escopeta': [2, 2, 2, 2, 2]\n",
     "}\n",
     "\n",
-    "# your code\n"
+    "# your code\n",
+    "\n",
+    "total_balas = []\n",
+    "for arma in armas:\n",
+    "    if arma in cargadores.keys():\n",
+    "        balas = sum(cargadores[arma])\n",
+    "        total_balas.append(balas)\n",
+    "dead_zombies = sum(total_balas)\n",
+    "print(dead_zombies)"
    ]
   },
   {
@@ -52,9 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "158\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola', 'ametralladora', 'escopeta', 'fusil de francotirador']\n",
     "\n",
@@ -65,7 +89,15 @@
     "    'fusil de francotirador': [1, 2, 4]\n",
     "}\n",
     "\n",
-    "# your code\n"
+    "# your code\n",
+    "\n",
+    "total_balas = []\n",
+    "for arma in armas:\n",
+    "    if arma in cargadores.keys():\n",
+    "        balas = sum(cargadores[arma])\n",
+    "        total_balas.append(balas)\n",
+    "dead_zombies = sum(total_balas)\n",
+    "print(dead_zombies)"
    ]
   },
   {
@@ -77,9 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "158\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola', 'ametralladora', 'escopeta', 'fusil de francotirador']\n",
     "\n",
@@ -91,7 +131,14 @@
     "    'bazoka': [1, 1]\n",
     "}\n",
     "\n",
-    "# your code\n"
+    "# your code\n",
+    "total_balas = []\n",
+    "for arma in armas:\n",
+    "    if arma in cargadores.keys():\n",
+    "        balas = sum(cargadores[arma])\n",
+    "        total_balas.append(balas)\n",
+    "dead_zombies = sum(total_balas)\n",
+    "print(dead_zombies)"
    ]
   },
   {
@@ -103,9 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "151\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola', 'ametralladora', 'escopeta', 'fusil de francotirador']\n",
     "\n",
@@ -115,7 +170,14 @@
     "    'escopeta': [2, 2, 2, 1] \n",
     "}\n",
     "\n",
-    "# your code\n"
+    "# your code\n",
+    "total_balas = []\n",
+    "for arma in armas:\n",
+    "    if arma in cargadores.keys():\n",
+    "        balas = sum(cargadores[arma])\n",
+    "        total_balas.append(balas)\n",
+    "dead_zombies = sum(total_balas)\n",
+    "print(dead_zombies)"
    ]
   }
  ],
@@ -135,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
