--- a/apocalypsis-zombie.ipynb
+++ b/apocalypsis-zombie.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -43,14 +43,29 @@
     "\n",
     "# your code\n",
     "\n",
-    "total_balas = []\n",
+    "total_balas = 0\n",
     "for arma in armas:\n",
     "    if arma in cargadores.keys():\n",
     "        balas = sum(cargadores[arma])\n",
-    "        total_balas.append(balas)\n",
-    "dead_zombies = sum(total_balas)\n",
-    "print(dead_zombies)"
+    "        total_balas += balas\n",
+    "print(total_balas)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pistola\n",
+      "escopeta\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -68,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +106,12 @@
     "\n",
     "# your code\n",
     "\n",
-    "total_balas = []\n",
+    "total_balas = 0\n",
     "for arma in armas:\n",
     "    if arma in cargadores.keys():\n",
     "        balas = sum(cargadores[arma])\n",
-    "        total_balas.append(balas)\n",
-    "dead_zombies = sum(total_balas)\n",
-    "print(dead_zombies)"
+    "        total_balas += balas\n",
+    "print(total_balas)"
    ]
   },
   {
@@ -109,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -132,13 +146,12 @@
     "}\n",
     "\n",
     "# your code\n",
-    "total_balas = []\n",
+    "total_balas = 0\n",
     "for arma in armas:\n",
     "    if arma in cargadores.keys():\n",
     "        balas = sum(cargadores[arma])\n",
-    "        total_balas.append(balas)\n",
-    "dead_zombies = sum(total_balas)\n",
-    "print(dead_zombies)"
+    "        total_balas += balas\n",
+    "print(total_balas)"
    ]
   },
   {
@@ -150,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -171,13 +184,12 @@
     "}\n",
     "\n",
     "# your code\n",
-    "total_balas = []\n",
+    "total_balas = 0\n",
     "for arma in armas:\n",
     "    if arma in cargadores.keys():\n",
     "        balas = sum(cargadores[arma])\n",
-    "        total_balas.append(balas)\n",
-    "dead_zombies = sum(total_balas)\n",
-    "print(dead_zombies)"
+    "        total_balas += balas\n",
+    "print(total_balas)"
    ]
   }
  ],
